# FinalHope

./: .gitmodules  CMakeLists.txt
include/: mvp.hpp  setu.hpp  setup.hpp  vertex.hpp
shaders/: base.f.glsl  base.v.glsl
src/: fhope-main.cpp  header-only-imps.cpp  mvp.cpp  setu.cpp  setup.cpp  vertex.cpp
